--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "login": {
     "heading": "Thyn",
-    "subtitle": "Another other text right here",
+    "subtitle": "Another other text right here {count}",
     "button_text": "Login"
   }
 }
