--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -2,6 +2,6 @@
   "login": {
     "heading": "Thyn",
     "subtitle": "Another other text right here {count}",
-    "button_text": "Login"
+    "connect_with_spotify": "Connect with Spotify"
   }
 }
