Login screen adjustments (#8)
* Add LoginContainer
* Add ColorConstants
* Add IconsConstants
* Add Spotify icon
* Add LoginButton
* Adjust Connector
* Update i18n
* Update README.md

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "login": {
     "heading": "Thyn",
-    "subtitle": "Another other text right here",
-    "button_text": "Login"
+    "subtitle": "Another other text right here {count}",
+    "connect_with_spotify": "Connect with Spotify"
   }
 }
